Added CSRF middleware.

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
         </div>
         <div class="form-style-8 hid">
             <h2>Go to a restricted area</h2>
-            <form id="form-restrict" method="GET" action="/users">
-                <p><input type="submit" id="btnRestricted" value="Go to Restricted!" /></p>
+            <form id="form-restrict">
+                <p><input type="button" id="btnRestricted" value="Go to Restricted!" /></p>
             </form>
         </div>
         <script src="assets/js/main.js"></script>
